MODON MRE BPDEV/force-app/main/default/objects/KYC_Batch_Setting__mdt/KYC_Batch_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to configure the cutoff date and the delay in picking records after last modified time stamp.</description>
    <label>KYC Batch Setting</label>
    <pluralLabel>KYC Batch Settings</pluralLabel>
</CustomObject>