MODON MRE BPDEV/force-app/main/default/objects/KYC_Batch_Setting__mdt/fields/Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Date__c</fullName>
    <description>Acts as a master filter date. The batch job will completely ignore any KYC application created before this specific date.</description>
    <inlineHelpText>Enter a date and time. Only KYC records created ON or AFTER this date will be processed by the batch job. This prevents old historical records from suddenly receiving reminder emails.</inlineHelpText>
    <label>Cutoff Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>