MODON MRE BPDEV/force-app/main/default/objects/KYC_Batch_Setting__mdt/fields/Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Delay_Minutes__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Determines how many minutes the batch job should wait after a KYC application is last modified before classifying it as &quot;abandoned&quot; and sending the reminder email.</description>
    <inlineHelpText>Enter the number of minutes (e.g., 15) to delay the reminder email. The batch will only pick up records whose Last Modified Date is older than this many minutes.</inlineHelpText>
    <label>Delay Minutes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>