MODON MRE BPDEV/force-app/main/default/objects/KYC_Batch_Setting__mdt/fields/Excluded_Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Journey_Status__c</fullName>
    <description>Defines a specific internal journey status that the batch job must explicitly ignore to prevent spamming customers who are currently in the signing process.</description>
    <inlineHelpText>Enter the status to exclude (e.g., KYC Data Submitted - Signing Session Starting). Any KYC record with this exact Journey Status will be skipped.</inlineHelpText>
    <label>Excluded Journey Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>