MODON MRE BPDEV/force-app/main/default/objects/KYC_Batch_Setting__mdt/fields/Valid_Signzy_Status__c.field-meta.xml
<CustomField>
    <fullName>Valid_Signzy_Status__c</fullName>
    <description>Defines the target Signzy journey status required for the batch job to process the KYC application.</description>
    <inlineHelpText>Enter the exact status string (e.g., COMPLETED). Only KYC records with this Signzy Journey Status will be evaluated for reminder emails.</inlineHelpText>
    <label>Valid Signzy Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>